[DATALAB-2151]: Fixed calendar and sticky footer on Safari browser (#1004)
[DATALAB-2151]: Fixed calendar and sticky footer on Safari browser

--- a/services/self-service/src/main/resources/webapp/src/app/reports/reporting/reporting-grid/reporting-grid.component.scss
+++ b/services/self-service/src/main/resources/webapp/src/app/reports/reporting/reporting-grid/reporting-grid.component.scss
@@ -92,6 +92,8 @@
       th {
         padding: 5px;
         font-size: 13px;
+        z-index: 103 !important;
+
       }
 
       .filter-field {
